--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -12,6 +12,12 @@
         android:title="Home" />
 
     <item
+        android:id="@+id/navigation_events"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="Events" />
+
+
+    <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="Notifications" />
